[package]
name = "icy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ice-parser = { path = "../ice-parser" }
iiv-gen = { path = "../iiv-gen" }
iiv-cl = { path = "../iiv-cl" }
iiv = { path = "../iiv" }